@@ -1,7 +1,7 @@
 /*-
  * ============LICENSE_START=======================================================
  *  Copyright (C) 2016-2018 Ericsson. All rights reserved.
- *  Modifications Copyright (C) 2019 Nordix Foundation.
+ *  Modifications Copyright (C) 2019-2020 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -161,7 +161,7 @@ public class AxKeyUse extends AxKey {
 
         final AxKeyUse copy = ((AxKeyUse) copyObject);
         try {
-            copy.usedKey = usedKey.getClass().newInstance();
+            copy.usedKey = usedKey.getClass().getDeclaredConstructor().newInstance();
         } catch (final Exception e) {
             throw new ApexRuntimeException("error copying concept key: " + e.getMessage(), e);
         }
